--- a/biblio.bib
+++ b/biblio.bib
@@ -426,3 +426,17 @@ DOI = {10.3390/rs70912356}
   year={1963},
   publisher={IEEE}
 }
+
+@MISC{IMM2012-03274,
+    author       = "K. B. Petersen and M. S. Pedersen",
+    title        = "The Matrix Cookbook",
+    year         = "2012",
+    month        = "nov",
+    keywords     = "Matrix identity, matrix relations, inverse, matrix derivative",
+    publisher    = "Technical University of Denmark",
+    address      = "",
+    note         = "Version 20121115",
+    url          = "http://www2.imm.dtu.dk/pubdb/p.php?3274",
+    abstract     = "Matrix identities, relations and approximations. A desktop reference for quick overview of mathematics of matrices."
+}
+ 
